--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-13 16:44:28
+lastsearch = 2024-07-13 20:16:46
 
 [chanrathanhthuy.com]
 match = 9.7%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Hanvico LIVING - LV18
 url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html
 
 [songhongonline.vn]
-match = 48.0%%
-title = Bộ chăn ga gối SH_H19 069
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-h19-069
+match = 4.3%%
+title = Bộ sản phẩm SH_BT22 056
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bt22-056
 
 [changagoidemsonghong.com]
 match = 38.7%%
