--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-13 19:25:34
+lastsearch = 2024-07-13 20:21:36
 
 [eva.vn]
 match = -136.8%%
@@ -47,9 +47,9 @@ title = Địa chí Tiền Giang - Volume 1 - Page 334 - Google Books Result
 url = https://books.google.com/books?id=bqQMAQAAMAAJ&pg=PA334&lpg=PA334&dq=chieu+cay+moc+hoa16&source=bl&ots=31InjLlfRr&sig=ACfU3U0-cNmHhi7kR4nvfNqyw4C-ECrAvg&hl=en&sa=X&ved=2ahUKEwj7neeEt4yHAxWTJzQIHZJSC7oQ6AF6BAgdEAM
 
 [www.diepxuan.com]
-match = 5.3%%
-title = Chiếu cây mộc hoa 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html
+match = 0.0%%
+title = Chiếu cây mộc hoa 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-moc-hoa-180x200.html
 
 [mietistudio.com]
 match = -131.6%%
@@ -215,4 +215,9 @@ url = https://giongcaytrong.com/san-pham/cay-cong-trinh-cay-bong-mat/cay-bong-ma
 match = -136.8%%
 title = Cây náng hoa trắng - dược liệu đa lợi ích cho sức khỏe ...
 url = https://medlatec.vn/tin-tuc/cay-nang-hoa-trang--duoc-lieu-da-loi-ich-cho-suc-khoe-con-nguoi-s51-n33318
+
+[mintmart.vn]
+match = -126.3%%
+title = 1 Cái Móc Dán Tường Chịu Lực Siêu Dính Trong Suốt ...
+url = https://mintmart.vn/san-pham/1-cai-moc-dan-tuong-chiu-luc-sieu-dinh-trong-suot-chiu-luc-tot-treo-tuong-chac-chan-gia-re-6x6-cm/
 
