--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-13 15:13:49
+lastsearch = 2024-07-13 20:15:56
 
 [www.tui.co.uk]
-match = -216.7%%
-title = Where We Fly | Flights with TUI 2024 / 2025
-url = https://www.tui.co.uk/flight/where-we-fly
+match = 0.0%%
+title = Buy South Korean won
+url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
 
 [uk.trip.com]
 match = -233.3%%
