--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-13 20:18:18
+lastsearch = 2024-07-13 21:45:07
 
 [www.lazada.vn]
 match = -60.9%%
@@ -14,12 +14,12 @@ url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx
 [www.facebook.com]
 match = 52.2%%
 title = Chiếu Nhựa Thái Bình | Thanh Hóa
-url = https://www.facebook.com/chieunhuathaibinh/?locale=hr_HR
+url = https://www.facebook.com/chieunhuathaibinh/
 
 [www.sendo.vn]
-match = 26.1%%
-title = chiếu nhựa thái bình 1m8 x2m - chieu1m8
-url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m8-x2m-43900792.html
+match = -34.8%%
+title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
+url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [shopee.vn]
 match = -78.3%%
@@ -72,9 +72,9 @@ title = Ngói Nhựa Thái Bình Giá Bán Lẻ Ngói Nhựa ASA/PVC 04 Lớp
 url = https://www.tonpvc.com/thai-binh-gia-ban-le-ngoi-nhua-asa-pvc-04-lop/
 
 [www.diepxuan.com]
-match = 13.0%%
-title = Chiếu nhựa Thái Bình GT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html
+match = 26.1%%
+title = Chiếu nhựa Thái Bình 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-160x200.html
 
 [h5.lazada.vn]
 match = -17.4%%
