--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-13 20:35:34
+lastsearch = 2024-07-13 21:46:56
 
 [www.gov.uk]
 match = -200.0%%
@@ -22,9 +22,9 @@ title = Official Manchester United Website
 url = https://www.manutd.com/
 
 [www.uscis.gov]
-match = -186.7%%
-title = Bringing Children, Sons and Daughters to Live in ...
-url = https://www.uscis.gov/family/bring-children-to-live-in-the-US
+match = -27.3%%
+title = USCIS: Home
+url = https://www.uscis.gov/
 
 [readingcinemas.com]
 match = -126.7%%
@@ -49,7 +49,7 @@ url = https://www.otosaigon.com/threads/khoe-cong-trinh-e-dang-thi-cong-cap-nhat
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/FIFA_Men's_World_Ranking
+url = https://en.wikipedia.org/wiki/San_Marino_national_football_team
 
 [www.regmovies.com]
 match = -113.3%%
@@ -654,7 +654,7 @@ url = https://www.liverpoolfc.com/
 [www.bernzomatic.com]
 match = -166.7%%
 title = Để học tốt Tiếng Anh 6Giải toán lớp 6 tập 1 trang 16
-url = https://www.bernzomatic.com/appwwcBy/53637.csv
+url = https://www.bernzomatic.com/app8789085
 
 [www.imdb.com]
 match = -86.7%%
