--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-13 21:18:23
+lastsearch = 2024-07-13 21:45:40
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Duy Long - Chàng trai xanh lá quyết theo đuổi nữ chính từ ..
 url = https://www.facebook.com/NguoiAyLaAi.VieChannel/videos/duy-long-chàng-trai-xanh-lá-quyết-theo-đuổi-nữ-chính-từ-show-ra-đời-thật-người-ấ/425027899585078/
 
 [www.youtube.com]
-match = -200.0%%
-title = FIX: VIDEO DXGKRNL FATAL ERROR in Windows 10/11 ...
-url = https://www.youtube.com/watch?v=7yEnuxJqQKg
+match = -100.0%%
+title = Resident Evil - Chris 10: New guns!
+url = https://www.youtube.com/watch?v=PeT3ic6LphU
 
 [www.reddit.com]
 match = -64.3%%
