--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-07-13 19:48:27
+lastsearch = 2024-07-14 00:50:58
 
 [demxanh.com]
 match = -21.7%%
@@ -12,9 +12,9 @@ title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
 url = https://demxanh.com/chieu-truc-cao-bang.html
 
 [www.diepxuan.com]
-match = 21.7%%
-title = Chiếu cây Cao Bằng A 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html
+match = 26.1%%
+title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
 
 [uannga.vn]
 match = 56.5%%
@@ -22,9 +22,9 @@ title = Chiếu trúc cao bằng 150*190
 url = https://uannga.vn/index.php/shops/chieu-mat/chieu-truc-cao-bang-150-190.html
 
 [shopee.vn]
-match = -65.2%%
-title = Chiếu trúc Cao Bằng Cao Sơn dòng đối mục loại 1 chính ...
-url = https://shopee.vn/Chiếu-trúc-Cao-Bằng-Cao-Sơn-dòng-đối-mục-loại-1-chính-hãng-KT-160-180-200X220cm-i.334752746.9233812040
+match = -69.6%%
+title = Chiếu trúc cây cao bằng sịn hàng loại 1 (chiếu 2x2.2 liên ...
+url = https://shopee.vn/Chiếu-trúc-cây-cao-bằng-sịn-hàng-loại-1-(chiếu-2x2.2-liên-hệ-với-shop-)-i.68883759.1152873373
 
 [chuyenhangviet.com]
 match = -43.5%%
