--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-14 00:32:49
+lastsearch = 2024-07-14 00:52:25
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Nuôi thuỷ sản mùa nóng: Bí quyết tránh thất bại | VTC16
 url = https://www.youtube.com/watch?v=9eVWzfQu9Uo
 
 [books.google.com]
-match = -231.2%%
-title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
-url = https://books.google.com/books?id=HJTaAAAAMAAJ&pg=RA4-PA66&lpg=RA4-PA66&dq=chieu+lac+soc+16&source=bl&ots=I5hi3ViNdY&sig=ACfU3U3_ghg5yJU1MzcwerdhO1m2lRHXaA&hl=en&sa=X&ved=2ahUKEwjSoOaNi6OHAxVxj4kEHbC9AYIQ6AF6BAgdEAM
+match = -218.8%%
+title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
+url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+16&source=bl&ots=LZu5YYbyUk&sig=ACfU3U3eoy1XoP4Uu2w7M-RLRMIlV06lAw&hl=en&sa=X&ved=2ahUKEwi82_nEyqSHAxW2FVkFHWp8Bg8Q6AF6BAgbEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
