--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-14 00:52:25
+lastsearch = 2024-07-14 01:48:55
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Nuôi thuỷ sản mùa nóng: Bí quyết tránh thất bại | VTC16
 url = https://www.youtube.com/watch?v=9eVWzfQu9Uo
 
 [books.google.com]
-match = -218.8%%
-title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
-url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+16&source=bl&ots=LZu5YYbyUk&sig=ACfU3U3eoy1XoP4Uu2w7M-RLRMIlV06lAw&hl=en&sa=X&ved=2ahUKEwi82_nEyqSHAxW2FVkFHWp8Bg8Q6AF6BAgbEAM
+match = -150.0%%
+title = American Soap Journal and Manufacturing Chemist
+url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9DkGbyw3&sig=ACfU3U2fWoR1vqvjevIdok_6N909-tAm9A&hl=en&sa=X&ved=2ahUKEwj-1tqV16SHAxW0M1kFHU4JBAkQ6AF6BAgfEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
