--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-14 00:35:03
+lastsearch = 2024-07-14 01:44:02
 
 [burningman.org]
 match = -60.0%%
@@ -910,4 +910,9 @@ url = https://fantendo.fandom.com/wiki/Mega_Man_12_(OwtheEdgehog)
 match = -240.0%%
 title = If there's ever a Mega Man 12, what's the first thing you ...
 url = https://www.reddit.com/r/Megaman/comments/12sf10z/if_theres_ever_a_mega_man_12_whats_the_first/
+
+[whc.unesco.org]
+match = -33.3%%
+title = Trang An Landscape Complex
+url = https://whc.unesco.org/en/list/1438/
 
