--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-13 21:36:32
+lastsearch = 2024-07-14 01:45:38
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -17,9 +17,9 @@ title = Davina Xanh (4/4/2024) - Athlete Awards
 url = https://bigwest.org/awards.aspx?aow=1106
 
 [www.imdb.com]
-match = 0.0%%
-title = Green Book (2018)
-url = https://www.imdb.com/title/tt6966692/
+match = -100.0%%
+title = Blue Eye Samurai (TV Series 2023)
+url = https://www.imdb.com/title/tt13309742/
 
 [www.etsy.com]
 match = 35.7%%
@@ -300,4 +300,9 @@ url = https://evergreenrecreation.com/224/Ice-Skating-Hockey
 match = -150.0%%
 title = Resansman 16,Nombres 16,Numbers 16 VKF;BDS;KJV
 url = https://www.biblegateway.com/passage/?search=Resansman 16,Nombres 16,Numbers 16&version=VKF;BDS;KJV;NKJV
+
+[www.bernzomatic.com]
+match = -257.1%%
+title = An ninh Bến Tre Ký sự Bến Tre Xanh Thể thao bến treXem truyề
+url = https://www.bernzomatic.com/appTehRq6feFR
 
