--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-14 00:48:22
+lastsearch = 2024-07-14 01:46:42
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -12,13 +12,13 @@ title = Ruột Korea - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/ruot-korea.html
 
 [www.instagram.com]
-match = -35.0%%
-title = Fabiana Justus (@fabianajustus)
-url = https://www.instagram.com/fabianajustus/?hl=en
+match = -10.0%%
+title = Rafa Tomasi 👽 (@rafaelatomasi)
+url = https://www.instagram.com/rafaelatomasi/?hl=en
 
 [www.reddit.com]
-match = -50.0%%
-title = Riot is cutting back budget on esports?
+match = -135.0%%
+title = Riot is cutting back budget on esports? : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -110.0%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -90.0%%
+title = NORTH KOREA NEWSLETTER NO. 244 (January 10, 2013)
+url = https://en.yna.co.kr/view/AEN20130109006800325
 
 [www.vlr.gg]
 match = 5.6%%
