--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-13 22:44:57
+lastsearch = 2024-07-14 02:19:06
 
 [www.youtube.com]
-match = -147.4%%
-title = 3 Yếu tố giúp cây hoa Mộc hương phát triển nhanh cây khoẻ ...
-url = https://www.youtube.com/watch?v=ASsdVo0WBew
+match = -142.9%%
+title = YouTube
+url = https://www.youtube.com/watch?v=P2FZLlxjB4U
 
 [trangtrisanvuon.vn]
 match = -147.4%%
@@ -213,8 +213,8 @@ url = https://mocnhienfarm.com/products/hoa-chieu-tim
 
 [kbank.nganhangs.com]
 match = -184.2%%
-title = Cây ATM ngân hàng Kbank Thái Lan (Kbank) tại Đường Mộc Bài 6 ...
-url = https://kbank.nganhangs.com/cay-atm/da-nang/lien-chieu/duong-moc-bai-6
+title = Cây ATM ngân hàng Kbank Thái Lan (Kbank) tại Đường Mộc Bài 2 ...
+url = https://kbank.nganhangs.com/cay-atm/da-nang/lien-chieu/duong-moc-bai-2
 
 [bptv.vn]
 match = -31.6%%
