--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-13 21:10:52
+lastsearch = 2024-07-14 02:16:44
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = -28.6%%
-title = Giá sỉ Chiếu nhựa hàng Việt Nam đầy đủ kích thước, giao ...
-url = https://www.sendo.vn/gia-si-chieu-nhua-hang-viet-nam-day-du-kich-thuoc-giao-mau-ngau-nhien-114506005.html
+match = 42.9%%
+title = chiếu nhựa thái 1m8x3m - sp 66677
+url = https://www.sendo.vn/chieu-nhua-thai-1m8x3m-37120771.html
 
 [mia.vn]
 match = -39.3%%
