--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-14 01:23:45
+lastsearch = 2024-07-14 02:18:22
 
 [shopee.vn]
-match = -25.0%%
-title = Thảm Chùi Chân Lông Xù Loang Đế Chống Trượt ...
-url = https://shopee.vn/Thảm-Chùi-Chân-Lông-Xù-Loang-Đế-Chống-Trượt-Combani-Kích-Thước-40x60-i.191529566.21231533396
+match = -4.2%%
+title = Thảm lau chân LEN MỊN thấm hút tốt KHỔ 40*60cm
+url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-KHỔ-40*60cm-i.241444570.12826821049
 
 [lepetit.com.vn]
 match = -66.7%%
-title = Thảm lau chân lông xù hình học thấm nước, chống trượt ...
-url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
+title = Thảm lau chân lông xù màu trơn thấm nước, chống trượt ...
+url = https://lepetit.com.vn/tham-long-xu-chu-nhat-ma-u-tron-tham-nuoc-chong-truot-40x60-cm
 
 [tiki.vn]
 match = -54.2%%
