--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-14 01:46:31
+lastsearch = 2024-07-14 02:10:39
 
 [xoptraisan.info]
 match = -147.1%%
@@ -32,9 +32,9 @@ title = Thảm nỉ ghép trản sàn nhà Tường Lâm cao cấp - Lombomshop!
 url = https://lombom.com/tham-ni-ghep-san-nha/
 
 [trieuchau.com]
-match = -129.4%%
-title = Thảm Trải Lót Sàn, Sàn Nhựa Giả Gỗ, Thảm Nhựa TPHCM
-url = https://trieuchau.com/
+match = -105.9%%
+title = 40*40*10 tấm - Thảm xốp trải sàn vân gỗ Âu Lạc
+url = https://trieuchau.com/vi-vn/1057/28075/Tham-Xop-40x40cm/404010-tam--Tham-xop-trai-san-van-go-Au-Lac
 
 [www.facebook.com]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Keo xịt dán xốp dán tường, giấy, thảm nỉ, thảm simili, 
 url = https://ahamart.com.vn/keo-xit-dan-xop-dan-tuong-giay-tham-ni-tham-simili-vai-go-mut-cach-am-yuan-feng-sponge-spray-adhesive-pj77-600ml-p39099706.html
 
 [chuyenhangviet.com]
-match = -82.4%%
-title = Thảm nỉ ghép cao cấp Tường Lâm mọi kích thước
-url = https://chuyenhangviet.com/tham-ni-ghep-cao-cap-tuong-lam/
+match = -182.4%%
+title = Thảm nỉ ghép không răng đế cao su thương hiệu Âu Lạc Việt ...
+url = https://chuyenhangviet.com/tham-ni-de-cao-su-au-lac/
 
 [www.innhatkhang.com]
 match = 0.0%%
